k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nivesh-tree
  labels:
    name: nivesh-tree
