k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nivesh-tree-service
  namespace: nivesh-tree
  labels:
    app: nivesh-tree
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: api
  selector:
    app: nivesh-tree
